--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "d3": "^5.14.2",
-    "d3-geo-projection": "^2.7.1"
+    "d3-geo-projection": "^2.7.1",
+    "screenfull": "^5.0.0"
   }
 }
