--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ wasm-bindgen = "0.2.45"
 js-sys = "0.3.32"
 serde_json = "1.0.44"
 serde = { version = "1.0", features = ["derive"] }
+priority-queue = "0.6.0"
+petgraph = "0.4.13"
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. However, it is slower than the default
 # allocator, so it's not enabled by default.
